@@ -13,6 +13,9 @@ SimGrid (3.7) NOT RELEASED; urgency=low
 
   XBT:
   * Mallocators: allow value NULL for the reset function.
+  * Dicts: new function xbt_dict_new_homogeneous(void(*)(void*)) to
+    create homogeneous dictionaries, where all the elements share the
+    same free function.
 
   -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
